@@ -1,3 +1,9 @@
+2011-05-14  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* src/frames.c
+	* src/sawfish_subrs.h
+	* lisp/sawfish/wm/frames.jl: use frame-font for titlebars, rather than
+	default-font (now changing titlebar-font leaves message-font intact
+
 2011-05-13  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/frames.jl: add possibility to also change the
 	font-color for highlighted and clicked frames regardless of theme
